various form element alignment fixes, js for expanding text areas beyond width

--- a/css/material_admin.css
+++ b/css/material_admin.css
@@ -10375,39 +10375,55 @@ a.button:hover {
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2); }
 
 /* line 194, /Users/brian.wald/Sites/material_admin/scss/base/_common.scss */
+details {
+  border: none !important; }
+
+/* line 198, /Users/brian.wald/Sites/material_admin/scss/base/_common.scss */
 .shadow-box, .entity-meta__header, .confirm-form-wrapper {
   padding: 10px 15px;
   border-top: 1px solid #ddd;
   border-right: 1px solid #ddd;
   border-left: 1px solid #ddd; }
 
-/* line 202, /Users/brian.wald/Sites/material_admin/scss/base/_common.scss */
+/* line 206, /Users/brian.wald/Sites/material_admin/scss/base/_common.scss */
 .views-field-node-bulk-form {
   padding-left: 10px; }
 
-/* line 206, /Users/brian.wald/Sites/material_admin/scss/base/_common.scss */
+/* line 210, /Users/brian.wald/Sites/material_admin/scss/base/_common.scss */
 .button--small {
   font-size: .8em; }
 
-/* line 212, /Users/brian.wald/Sites/material_admin/scss/base/_common.scss */
+/* line 216, /Users/brian.wald/Sites/material_admin/scss/base/_common.scss */
 .clearfix {
   clear: none; }
 
-/* line 223, /Users/brian.wald/Sites/material_admin/scss/base/_common.scss */
+/* line 227, /Users/brian.wald/Sites/material_admin/scss/base/_common.scss */
 .collapsible li.active .collapsible-header.with-arrows:before, details.form-wrapper li.active .collapsible-header.with-arrows:before, .collapsible li.active details.form-wrapper summary.with-arrows:before, details.form-wrapper .collapsible li.active summary.with-arrows:before, details.form-wrapper li.active summary.with-arrows:before {
   content: "";
   padding: 0px 5px; }
 
-/* line 231, /Users/brian.wald/Sites/material_admin/scss/base/_common.scss */
+/* line 235, /Users/brian.wald/Sites/material_admin/scss/base/_common.scss */
 .collapsible li .collapsible-header.with-arrows:before, details.form-wrapper li .collapsible-header.with-arrows:before, .collapsible li details.form-wrapper summary.with-arrows:before, details.form-wrapper .collapsible li summary.with-arrows:before, details.form-wrapper li summary.with-arrows:before {
   content: "";
   padding: 0px 5px; }
 
-/* line 240, /Users/brian.wald/Sites/material_admin/scss/base/_common.scss */
+/* line 244, /Users/brian.wald/Sites/material_admin/scss/base/_common.scss */
 span.marker {
   font-size: .8em;
   font-weight: 300;
   border-radius: 2px; }
+
+/* line 252, /Users/brian.wald/Sites/material_admin/scss/base/_common.scss */
+.waves-input-wrapper {
+  vertical-align: middle; }
+
+/* line 256, /Users/brian.wald/Sites/material_admin/scss/base/_common.scss */
+.select-wrapper + label {
+  left: 0; }
+
+/* line 261, /Users/brian.wald/Sites/material_admin/scss/base/_common.scss */
+.ckeditor-buttons:before, .ckeditor-buttons:after, .ckeditor-buttons {
+  box-sizing: initial; }
 
 /* @file
  * Form specific styling
@@ -10634,6 +10650,10 @@ details.form-wrapper .details-wrapper {
 /* line 286, /Users/brian.wald/Sites/material_admin/scss/base/_forms.scss */
 .input-field .field-prefix {
   padding-right: 10px; }
+
+/* line 290, /Users/brian.wald/Sites/material_admin/scss/base/_forms.scss */
+.dblog-filter-form .form-item-type, .dblog-filter-form .form-item-severity {
+  display: inline; }
 
 /* @file
  * Specific styling for admin
