--- a/scss/base/_common.scss
+++ b/scss/base/_common.scss
@@ -188,7 +188,11 @@ a.button {
 }
 
 .shadow {
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2)
+}
+
+details {
+  border:none!important;
 }
 
 .shadow-box {
@@ -243,3 +247,17 @@ span.marker {
   font-weight: 300;
   border-radius:2px;
 }
+
+// override waves wrapper
+.waves-input-wrapper {
+  vertical-align: middle;
+}
+
+ .select-wrapper + label {
+  left:0;
+ }
+
+ //ckeditor fix as it wont work with box-sizing
+ .ckeditor-buttons:before, .ckeditor-buttons:after, .ckeditor-buttons {
+  box-sizing:initial;
+ }
