--- a/scss/base/_forms.scss
+++ b/scss/base/_forms.scss
@@ -287,3 +287,7 @@ a#edit-cancel {
   padding-right:10px;
 }
 
+.dblog-filter-form .form-item-type, .dblog-filter-form .form-item-severity {
+  display:inline;
+}
+
